# ShareMouse

./: .gitignore  CLAUDE.md  Cargo.toml  config.yaml  flake.nix
src/: capturer.rs  config.rs  coordinate.rs  event.rs  injector.rs  main.rs  network.rs  virtual_model.rs  virtual_mouse.rs
